  character into the buffer on JDK 1.4

+ API Changes

- FileVFS.getPermissions() and setPermissions() methods get and set file
  permissions on Unix. These methods were formely private, now they are
  public and static. They do nothing if jEdit is not being run on a Unix
  platform.
- Minor change to marker behavior to facilitate AStyle and JavaStyle
  plugins (Dirk Moebius)

* Version 3.2pre8

+ New Features

- PV-WAVE syntax highlighting (Ed Stewart)

+ Enhancements

- Improved XSL abbrevs (Ollie Rutherfurd)
- jEditLauncher updates (John Gellene)
- Updated Duplicate_Line and Next_Char macros (John Gellene)
- Improved shortcuts option pane (Dirk Moebius)
- Improved PHP mode
- Middle mouse button paste can now be disabled in the Global Options
  dialog box

+ Neutral

- Only selections created with the mouse are stored in the % register

+ Bug Fixes

- Right mouse button clicks didn't work on all platforms
- Printing didn't work due to a change in 3.2pre7
- Fixed exception printed when trying to use the file chooser dialog box
- jEditLauncher didn't work due to an EditServer change in pre7
- jEdit might hang if an error was shown while downloading the plugin
  list in the plugin manager

* Version 3.2pre7

+ New Features

- BeanShell 1.2beta1 included
- When running on Unix with Java 2 version 1.4, clicking the middle
  mouse button in the text area now pastes the primary selection. This
  obsoletes the XClipboard plugin
- Visual Foxpro syntax highlighting (Matt Price)
- SQR syntax highlighting (Richard Ashwell)
- Cruddy -bshclient command-line switch replaced with -run=<script>
  parameter; it will run the specified script file, and works in both
  the initial and client instances of jEdit.
  - The script is run in the global namespace, so variables and
    functions defined within will be available for the rest of the
    editing session. Just like a startup script.
  - The 'view', 'buffer', 'editPane' and 'textArea' variables are not