@@ -28,7 +28,7 @@ CDATA DSSSL> ]>
 (element (funcdef function) ($bold-seq$))
 (element funcsynopsis (process-children))
 
-(define %funcsynopsis-style% #f)
+(define %funcsynopsis-style% 'ansi)
 
 ;; abstract is used to tag data, not to render output
 (element (listitem abstract) (process-children))
